OPENNLP-1532 Conduct cleanup in existing test code